--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,30 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
+nav a{
+    color:black;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.nav-bar nav{
+    display:flex;
+	justify-content: space-evenly;
+	padding-bottom: 2%;
+    width: 100%;
+    align-items: flex-end;
+    padding-bottom: 3%;
+}
+
+.top-img{
+    display:flex ;
+    justify-content: center;
+    padding-bottom: 3%;
+}
+
+.img1{
+    width:80%
+}
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -67,31 +91,37 @@ p {
 }
 
 .container {
-    width: 800px;
+    width: 1500px;
     margin: 0 auto;
 }
 
 .top-content {
     display: flex;
-    flex-wrap: wrap;
+    
     justify-content: space-evenly;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     border-bottom: 1px dashed black;
 }
 
+.top-content .text-container h2{
+    font-size: 35px;
+}
+
 .top-content .text-container {
-    width: 48%;
+    justify-content: space-evenly;
+    width: 100%;
     padding: 0 1%;
     padding-bottom: 20px;  
+    font-size: 23px;
 }
 
 .middle-content {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     border-bottom: 1px dashed black;
 }
 
 .middle-content h2 {
-    padding: 0 2%;
+    padding: 0 3%;
     margin-bottom: 0;
 }
 
@@ -101,24 +131,59 @@ p {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    background: black;
+.middle-content .boxes .box{
+    width: 190px;
+    height: 180px;
+   
     margin: 20px 2.5%;
-    color: white;
+   color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+.box1{
+   background-color:teal;
+}
 
+.box2{
+    background-color: gold;
+}
+
+.box3{
+    background-color: cadetblue;
+}
+.box4{
+    background-color: coral;
+}
+.box5{
+    background-color: crimson;
+}
+.box6{
+    background-color: forestgreen;
+}
+.box7{
+    background-color: darkorchid;
+}
+.box8{
+    background-color: hotpink;
+}
+.box9{
+    background-color: indigo;
+}
+.box10{
+    background-color: dodgerblue;
+}
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
     justify-content: space-around;
 }
+.bottom-content .text-container h2{
+    font-size: 30px;
+}
 
 .bottom-content .text-container {
+    font-size: 25px;
     padding-right: 4%;
 }
 
@@ -143,4 +208,75 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+/* ABOUT PAGE CSS*/
+
+
+.top-img2{
+    display:flex ;
+    justify-content: center;
+    padding-bottom: 3%;
+}
+.aboutp{
+    border-bottom: dotted 2px black;
+
+    margin-bottom: 3%;
+}
+
+.abouttext h2{
+    font-size: 25px;
+}
+.abouttext p{
+    font-size:24px;
+    margin-bottom: 2%;
+}
+.aboutpics1{
+   
+    display: flex;
+    flex-wrap: wrap;
+  justify-content: center;
+}
+ 
+.aboutpics1 div{
+    width: 40%;
+    border-bottom: dotted 2px black;
+    margin-bottom: 3%;
+   margin-right: 1%;
+  padding-bottom: 1%;
+}
+.aboutpics1 div h2{
+    margin-top: 2%;
+    font-size: 25px;
+}
+.aboutpics1 div p{
+    font-size: 20px;
+    margin-bottom: 3%;
+}
+
+
+.aboutpics1 div img{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+width: 100%;
+  
+}
+button {
+    font-size: 25px;
+    border-radius: 8px;
+    border: solid black 2px;
+
+margin-bottom: 3%;}
+
+.aboutbottom{
+    margin-bottom: 3%;
+}
+.aboutbottom h2{
+    font-size: 30px;
+
+}
+.aboutbottom p{
+    font-size: 20px;
+
 }
