--- a/css/index.css
+++ b/css/index.css
@@ -280,3 +280,10 @@ margin-bottom: 3%;}
     font-size: 20px;
 
 }
+
+button {
+    animation-duration: 8s;
+    animation-name: slidein;
+    animation-iteration-count: infinite;
+}
+
