--- a/css/index.css
+++ b/css/index.css
@@ -242,8 +242,10 @@ footer nav a {
     width: 40%;
     border-bottom: dotted 2px black;
     margin-bottom: 3%;
-   margin-right: 1%;
+   
   padding-bottom: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 .aboutpics1 div h2{
     margin-top: 2%;
@@ -252,20 +254,26 @@ footer nav a {
 .aboutpics1 div p{
     font-size: 20px;
     margin-bottom: 3%;
+    
 }
 
 
 .aboutpics1 div img{
     display: block;
-  margin-left: auto;
+  margin-left:auto;
   margin-right: auto;
+  
 width: 100%;
   
 }
 button {
     font-size: 25px;
+    margin-top: 2%;
     border-radius: 8px;
     border: solid black 2px;
+    background-color: white;
+
+    
 
 margin-bottom: 3%;}
 
