--- a/css/index.css
+++ b/css/index.css
@@ -267,7 +267,7 @@ width: 100%;
   
 }
 button {
-    font-size: 25px;
+    font-size: 28px;
     margin-top: 2%;
     border-radius: 8px;
     border: solid black 2px;
@@ -278,7 +278,8 @@ button {
 margin-bottom: 3%;}
 
 .aboutbottom{
-    margin-bottom: 3%;
+    margin-bottom: 5%;
+    margin-top: 3%;
 }
 .aboutbottom h2{
     font-size: 30px;
