--- a/css/index.css
+++ b/css/index.css
@@ -220,7 +220,7 @@ footer nav a {
 }
 .aboutp{
     border-bottom: dotted 2px black;
-
+margin: 0 8px;
     margin-bottom: 3%;
 }
 
@@ -232,20 +232,19 @@ footer nav a {
     margin-bottom: 2%;
 }
 .aboutpics1{
-   
+ width: 100%;
     display: flex;
-    flex-wrap: wrap;
-  justify-content: center;
+    justify-content: space-evenly;
+  
 }
  
 .aboutpics1 div{
-    width: 40%;
+  
     border-bottom: dotted 2px black;
     margin-bottom: 3%;
-   
+   margin:0 3%;
   padding-bottom: 1%;
-  padding-left: 2%;
-  padding-right: 2%;
+ 
 }
 .aboutpics1 div h2{
     margin-top: 2%;
@@ -262,20 +261,56 @@ footer nav a {
     display: block;
   margin-left:auto;
   margin-right: auto;
+  width: 100%;
   
-width: 100%;
+  
+
+  }
+  .aboutpics2{
+   
+    display: flex;
+   
+  justify-content: space-around;
+}
+ 
+.aboutpics2 div{
+    
+    border-bottom: dotted 2px black;
+    margin-bottom: 3%;
+   
+  padding-bottom: 1%;
+  margin:3% 3%;
+}
+.aboutpics2 div h2{
+    margin-top: 2%;
+    font-size: 25px;
+}
+.aboutpics2 div p{
+    font-size: 20px;
+    margin-bottom: 3%;
+    
+}
+
+
+.aboutpics2 div img{
+    display: block;
+  margin-left:auto;
+  margin-right:auto;
+  width: 100%;
   
 }
+
 button {
     font-size: 28px;
-    margin-top: 2%;
+    margin-top: 4%;
+    padding: 2%;
     border-radius: 8px;
     border: solid black 2px;
     background-color: white;
 
     
 
-margin-bottom: 3%;}
+margin-bottom: 6%;}
 
 .aboutbottom{
     margin-bottom: 5%;
